# IRMS

./: .prettierignore  LICENSE  README.md  package-lock.json  package.json
browser/stomp/: package.json  rabbitmq-stomp.js
iRMS_ROS/iRMS_module/src/: eventmanager2ros.code-workspace
iRMS_ROS/iRMS_module/src/EventManagerROS2/: .gitignore  CMakeLists.txt  package.xml
iRMS_ROS/iRMS_module/src/EventManagerROS2/include/event-manager-2-ros/: ea_connector.hpp  map_converter.hpp  message_interchange.hpp  ros_connector.hpp  tcp_connector.hpp
iRMS_ROS/iRMS_module/src/EventManagerROS2/src/: ea_connector.cpp  main.cpp  map_converter.cpp  message_interchange.cpp  ros_connector.cpp  tcp_connector.cpp
node/common/message-system-rabbitmq/: example.js  message-system-rabbitmq.js  package-lock.json
node/terrain-model/: package-lock.json  process-terrain.js  process-terrain.test.js
protobuf/: .gitignore  build.sh
protobuf/protos/: commands.proto
sandbox/: .gitignore  docker-compose.yml  start  stop
sandbox/rabbitmq/: enabled_plugins
scripts/: test-queue.sh
tools/qgis-terrain/: qgis-desktop-docker.sh
tools/qgis-terrain/majura-data/: majura_mtr_dem_1m_v2_xyz.aux.xml  mjura_mtr_rgb_1m.aux.xml  shapes.dbf  shapes.shp  shapes.shx  targets.dbf  targets.shp  targets.shx
